--- a/style.css
+++ b/style.css
@@ -204,7 +204,20 @@ border-right-color:black;
     border-style:solid;
     border-color:black;
 }
-#btne1,#btne2
+#btne3 {
+    height:20px;
+    position:absolute ;
+    width:60px;
+    top:110px;
+    left:160px;
+    font-size:8px;
+    text-align:center;
+    font-weight:bold;
+    text-shadow:0.5px 0.5px black;
+    maxlength:8;   
+    
+}
+#btne1,#btne2 
 {
      height:20px;
     position:absolute ;
